--- a/templates/base.html
+++ b/templates/base.html
@@ -7,32 +7,14 @@
 </head>
 <body>
 
-{% include 'includes/header.html %}
+{% include 'includes/header.html' %}
 
 <div class="row">
   {% block content %} {% endblock %}
-  <div class="rightcolumn">
-    <div class="card">
-      <h2>About Me</h2>
-      <div class="fakeimg" style="height:100px;">Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    </div>
-    <div class="card">
-      <h3>Popular Post</h3>
-      <div class="fakeimg">Image</div><br>
-      <div class="fakeimg">Image</div><br>
-      <div class="fakeimg">Image</div>
-    </div>
-    <div class="card">
-      <h3>Follow Me</h3>
-      <p>Some text..</p>
-    </div>
-  </div>
+  {% include 'includes/right_column.html' %}
 </div>
 
-<div class="footer">
-  <h2>Footer</h2>
-</div>
+{% include 'includes/footer.html' %}
 
 </body>
 </html>
